Updated content for "Create a vacancy" employer journey
Updated the content on all the pages agreed in the content review session earlier today with Matt and Ellen.

--- a/app/views/v5/employer/create/about-employer.html
+++ b/app/views/v5/employer/create/about-employer.html
@@ -8,7 +8,7 @@ Add some information - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">Add some information about {{data.orgName}}</h1>
+    <h1 class="govuk-heading-xl">Information about {{data.orgName}}</h1>
     {% if data.EmployerDescription and data.journey != 'new' %}
     <p class="govuk-body">Updating the employer information will also update the employer information on any unapproved vacancies eg. draft, pending review or rejected vacancies.</p>
     {%else%}
