--- a/app/views/v5/employer/create/application-process.html
+++ b/app/views/v5/employer/create/application-process.html
@@ -26,7 +26,7 @@ How would you like to receive applications? - Your apprenticeship adverts - {{se
             <div class="govuk-radios__item " data-module="business-name-vacancy-panel">
               <input class="govuk-radios__input" id="display-name-trading" name="selected_display_name" type="radio" value="trading" data-aria-controls="trading-name-conditional">
               <label class="govuk-label govuk-radios__label" for="display-name-trading">
-                Through an external website
+                Through a different website
               </label>
             </div>
             <div class="govuk-radios__conditional" id="trading-name-conditional">
