--- a/app/views/v5/employer/create/training-select.html
+++ b/app/views/v5/employer/create/training-select.html
@@ -14,7 +14,8 @@ What training will the apprentice take? - Your apprenticeship adverts - {{servic
 {% block content %}
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">What training will the apprentice take?</h1>
+        <h1 class="govuk-heading-xl">What training course will the apprentice take? 
+        </h1>
         <div class="" style="display:none;">
           {% for item in data.training %}
           <span class="data-name">{{item}}</span>
