--- a/app/views/v5/employer/create/wages.html
+++ b/app/views/v5/employer/create/wages.html
@@ -28,7 +28,7 @@ How much would you like to pay the apprentice? - Your apprenticeship adverts - {
       <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading">
-            How much would you like to pay the apprentice?
+            How much will the apprentice be paid?
           </h1>
         </legend>
         <div id="contact-hint" class="govuk-hint">
