--- a/app/views/v5/employer/create/contact.html
+++ b/app/views/v5/employer/create/contact.html
@@ -12,7 +12,7 @@ Add contact information - Your apprenticeship adverts - {{serviceName}} - GOV.UK
     </h1>
     <form method="post" class="dirty">
       <div class="govuk-form-group">
-          <label class="govuk-label" for="EmployerContactName">Contact name (optional)</label>
+          <label class="govuk-label" for="EmployerContactName">Contact details for ABC opticians (optional) )</label>
           <input class="govuk-input govuk-input--width-20" maxlength="100" type="text" id="EmployerContactName" name="EmployerContactName" value="{% if data.EmployerContactName %}{{data.EmployerContactName}}{%endif%}">
       </div>
       <div class="govuk-form-group">
