--- a/app/views/v5/employer/create/short-description.html
+++ b/app/views/v5/employer/create/short-description.html
@@ -18,7 +18,7 @@ Short description of the apprenticeship - Your apprenticeship adverts - {{servic
     <form method="post">
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="350">
         <div class="govuk-form-group">
-          <p class="govuk-body">Write a few sentences about the apprenticeship to attract applicants. This is an important part of what applicants will see when looking through a list of adverts, so make it stand out.</p>
+          <p class="govuk-body">Write a few sentences about the apprenticeship to attract applicants. <br>This information will appear under your advert title when applicants look through a list of adverts - make it stand out. </p>
           <p class="govuk-body">This could be: </p>
           <ul class="govuk-list govuk-list--bullet">
             <li>what you are offering </li>
