Minor content change to the task list in the create advert journey

--- a/app/views/v5/employer/create/task-list.html
+++ b/app/views/v5/employer/create/task-list.html
@@ -192,7 +192,7 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
             <span class="app-task-list__task-name">
               {% if data.section2 == "completed" %}
               <a href="positions?return_url=task-list" aria-describedby="contact-details-status">
-                Number of positions <!-- for this apprenticeship-->?
+                Number of positions
               </a>
               {% else %}
               Number of positions
