Updated content in "Create a vacancy" journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -175,7 +175,7 @@
         },
         summary:
         {
-          html: '21st December &mdash; 11th January 2022'
+          html: '19th December 2021 &mdash; 5th January 2022'
         }
       },    
       {
@@ -203,7 +203,7 @@
         },
         summary:
         {
-          html: '10th &mdash; 23rd November 2021'
+          html: '10th November &mdash; 23rd November 2021'
         }
       },
       {
