--- a/app/views/v5/employer/create/check-your-answers.html
+++ b/app/views/v5/employer/create/check-your-answers.html
@@ -16,12 +16,12 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
 
         <h1 class="govuk-heading-l">Check your answers before submitting your advert</h1>
 
-        <h2 class="govuk-heading-m">Apprenticeship summary</h2>
+        <h2 class="govuk-heading-m">Advert summary</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What do you want to call this advert?
+              Advert title
             </dt>
             <dd class="govuk-summary-list__value">
               [[your advert name]]
@@ -34,7 +34,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What training will the apprentice take?
+              Training course
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected training]]
@@ -47,7 +47,8 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Have you found a training provider?
+              
+Training provider
             </dt>
             <dd class="govuk-summary-list__value">
               [[your training provider]]
@@ -60,8 +61,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Short description of the apprenticeship
-            </dt>
+              Summary of the apprenticeship            </dt>
             <dd class="govuk-summary-list__value">
               [[your short description]]
             </dd>
@@ -73,7 +73,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Description of the apprenticeship
+              About the apprenticeship
             </dt>
             <dd class="govuk-summary-list__value">
               [[your description]]
@@ -91,7 +91,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              How much would you like to pay the apprentice?
+              Pay rate
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected pay]]
@@ -130,20 +130,8 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Where will the apprentice work?
-            </dt>
-            <dd class="govuk-summary-list__value">
-              [[selected location]]
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> selected location</span>
-              </a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              How many positions are there? 
+             
+Number of positions
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected number]]
@@ -154,6 +142,19 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
               </a>
             </dd>
           </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Location
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[selected location]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> selected location</span>
+              </a>
+            </dd>
+          </div>
         </dl>
 
         <h2 class="govuk-heading-m">Skills and qualifications</h2>
@@ -161,7 +162,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What skills and personal qualities would you like the applicant to have?
+              Skills
             </dt>
             <dd class="govuk-summary-list__value">
               [[skills and qualities]]
@@ -174,7 +175,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What qualifications would you like the applicant to have?
+              Qualifications
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected qualifications]]
@@ -187,7 +188,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What else would you like the applicant to consider? (optional)
+              Other things to consider
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected considerations]]
@@ -205,7 +206,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Which organisation is this advert for?
+              Name of organisation
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected organisation]]
@@ -218,7 +219,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Which employer name do you want on your advert?
+              Name of employer on advert
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected employer name]]
@@ -231,7 +232,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Add some information about the employer
+              Employer Information
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected information]]
@@ -244,7 +245,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-               Add contact information about the employer
+              Contact details
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected contact information]]
@@ -257,7 +258,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              How would you like to receive applications?
+              Website for application
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected answer]]
