--- a/app/views/v5/employer/create/location.html
+++ b/app/views/v5/employer/create/location.html
@@ -13,7 +13,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
         <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
             <h1 class="govuk-fieldset__heading">
-              Where {% if data.numberOfPositions > 1 %}will the 6 positions{% else %}will the apprentice{% endif %} work?
+              Where {% if data.numberOfPositions > 1 %}will the apprentices{% else %}will the apprentice{% endif %} work?
             </h1>
           </legend>
           <div class="govuk-radios" data-module="govuk-radios">
