--- a/app/views/v5/employer/create/short-description.html
+++ b/app/views/v5/employer/create/short-description.html
@@ -14,7 +14,7 @@ Short description of the apprenticeship - Your apprenticeship adverts - {{servic
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">Short description of the apprenticeship<h1>
+    <h1 class="govuk-heading-xl">Summary of the apprenticeship<h1>
     <form method="post">
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="350">
         <div class="govuk-form-group">
