--- a/app/views/v5/employer/create/training-select.html
+++ b/app/views/v5/employer/create/training-select.html
@@ -26,13 +26,13 @@ What training will the apprentice take? - Your apprenticeship adverts - {{servic
         <form method="post">
         <!--<form method="post" action="training-confirm">-->
           <fieldset class="govuk-fieldset">
-            <p class="govuk-body">If you have not found training for this apprenticeship, you can ​use the <a class="govuk-link" href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/" target="_blank">Find apprenticeship training service (opens in new tab or window)</a>.</p>
+            <p class="govuk-body">If you have not found a training course for this apprenticeship, you can ​use the <a class="govuk-link" href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/" target="_blank">Find apprenticeship training service (opens in new tab or window)</a>.</p>
             <div class="govuk-form-group search-field search-field-darker">
               <input type="hidden" name="clientsFilter" value="new">
               <div class="search-input ">
                 <label class="govuk-label" for="contact-by-email">
                   <span class="govuk-hint">
-                    Enter apprenticeship training title
+                    Enter apprenticeship training course
                   </span>
                 </label>
                 <div class="autocomplete__parent_wrapper govuk-!-margin-bottom-2">
