--- a/app/views/v5/employer/create/qualifications.html
+++ b/app/views/v5/employer/create/qualifications.html
@@ -24,7 +24,7 @@ What qualifications would you like the applicant to have? - Your apprenticeship 
           {% endif %}
         <h1 class="govuk-heading-xl">
           <span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Developer apprenticeship{% endif %}</span>
-          What qualifications would you like the applicant to have?
+          What qualifications does the applicant need to have?
         </h1>
         <p class="govuk-hint"> <a class="govuk-link--no-visited-state"  target="_blank" href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels"> What's the GCSE grading system? (opens in a new tab)</a></p>
 <br>
